# AssetOpsBench

./: .env.public  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  INSTRUCTIONS.md  README.md  SECRET_SCANNING_SETUP.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  chore.md  feature.md
.github/workflows/: guard-couchdb-data.yml  secret-scan.yml  stale.yml
aobench/datalayer/eamlite/: pyproject.toml
aobench/scenario-client/: pyproject.toml
aobench/scenario-server/: pyproject.toml
benchmarks/scenario_suite/: README.md
docs/: acknowledgments.md  data.md  evaluation.md  external-industrial-datasets.md  mcp-e2e-test-suite.md  mcp-servers.md  observability.md  opencode-agent.md  static-json-evaluation.md  stirrup-agent.md
docs/guideline/: case_study_industrial_asset_management.md  case_study_wind_turbine.md  ground_truth_design_guideline.md  utterance_design_guideline.md
docs/guideline/wind_turbine/: wind_turbine_utterances.json  wind_turbine_utterances.jsonl
scripts/: check_couchdb_data.sh
src/agent/: __init__.py  _cli_common.py  _litellm.py  _prompts.py  cli.py  models.py  runner.py
src/agent/claude_agent/: __init__.py  cli.py  runner.py
src/agent/claude_agent/tests/: test_runner.py
src/agent/deep_agent/: __init__.py  cli.py  runner.py
src/agent/deep_agent/tests/: test_runner.py
src/agent/direct_llm_agent/: __init__.py  cli.py  runner.py
src/agent/direct_llm_agent/tests/: test_runner.py
src/agent/openai_agent/: __init__.py  cli.py  runner.py
src/agent/openai_agent/tests/: test_runner.py
src/agent/opencode_agent/: __init__.py  cli.py  runner.py
src/agent/opencode_agent/tests/: __init__.py  (+1 more)
src/agent/plan_execute/: __init__.py  executor.py  models.py  planner.py  runner.py
src/agent/stirrup_agent/: Dockerfile.code  __init__.py  cli.py  runner.py  trajectory.py
src/agent/tests/: conftest.py  test_litellm.py  test_models.py  test_planner.py  test_runner.py  test_timing.py
src/benchmark/: __init__.py  scenario_suite_runner.py
src/benchmark/tests/: __init__.py  test_scenario_suite_runner.py
src/couchdb/: .allowed_datafiles  _design_workorders.json  collections.json  couchdb_setup.sh  docker-compose.yaml  init_asset_data.py  init_data.py  init_wo.py  loader.py  transforms.py
src/couchdb/scenarios_data/: default.json  scenario_1.json
src/evaluation/: __init__.py  cli.py  evaluator.py  loader.py  metrics.py  models.py  report.py  runner.py  static_json_score.py  static_json_table_eval.py
src/evaluation/scorers/: __init__.py  code_based.py  llm_judge.py  semantic.py  static_json.py
src/evaluation/tests/: conftest.py  test_evaluator.py  test_loader.py  test_metrics.py  test_models.py  test_report.py  test_runner.py  test_scorers.py  test_static_json_score.py  test_static_json_scorer.py  test_static_json_table_eval.py
src/llm/: __init__.py  base.py  litellm.py  openai_compat.py  routers.py
src/llm/tests/: test_backends.py  test_routers.py
src/observability/: __init__.py  file_exporter.py  persistence.py  runspan.py  tracing.py
src/observability/tests/: test_file_exporter.py  test_persistence.py  test_tracing.py
src/scenarios/local/: vibration_utterance.json
src/servers/fmsr/: main.py
src/servers/iot/: main.py
src/servers/sandbox/: .env.example  README.md  __init__.py  container_runtime.py  main.py
src/servers/tsfm/: main.py
src/servers/utilities/: main.py
src/servers/vibration/: __init__.py  couchdb_client.py  data_store.py  main.py
src/servers/wo/: couch.py  data.py  envelope.py  main.py  models.py  tools.py  workorders.py
(+38 files in other folders)
