[project]
name = "scenario-server"
version = "0.2.0"
description = "server scenarios"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "litestar[jinja]==2.19.0",
    "mlflow>=3.4.0",
    "reactxen",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
reactxen = { git = "https://github.com/IBM/ReActXen.git" }
